refactor: get questions list order by created date